feat(roles): enable super admin to assign admin roles
Only a super admin has access to this endpoint in the application. The super
admin can make users into "admins" and can revoke such access.
- include relevant tests
- add methods to handle user role update
- update swagger doc

[delivers 160555688]
